Configure `App` namespace autoloading
Signed-off-by: Sebastian Klinge <github@derklinge.de>

--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,10 @@
     ],
     "require": {
         "thiagoalessio/tesseract_ocr": "^2.12"
+    },
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        }
     }
 }
